UI + API fixes.

--- a/src/news.html
+++ b/src/news.html
@@ -56,16 +56,16 @@
       </ul>
       <div class="content">
          <div class="filter row">
-            <div class="input-field col s6">
+            <div class="input-field col s2">
                <select name="" id="filter-sportsType">
-                  <option value="" disabled selected>Filter by Sports Type</option>
+                  <option value="" selected>All Sports</option>
                   <option value="c">Cricket</option>
                   <option value="f">Football</option>
                </select>
             </div>
-            <div class="input-field col s6">
+            <div class="input-field col s2">
                <select name="" id="filter-newsStatusType">
-                  <option value="" disabled selected>Filter by News Status</option>
+                  <option value="" selected>All News</option>
                   <option value="Published">Published</option>
                   <option value="UnPublished">Unpublished</option>
                   <option value="Draft">Drafts</option>
