--- a/src/news_form.html
+++ b/src/news_form.html
@@ -54,58 +54,60 @@
          <li><a href="/news_form.html?type=add" class="active">News Form</a></li>
          <li class="hide only_admin"><a href="carousel_control.html">Carousel Control</a></li>
       </ul>
-      <div class="container">
+      <div>
          <div class="row">
             <h4>News Form :</h4>
             <form class="col s12" enctype="multipart/form-data">
                <div class="row">
-                  <div class="input-field col s6">
-                     <select id="news-sportstype" name="sport_type">
+                  <div class="input-field col s2">
+                     <select id="news-sportstype" name="sport_type" required>
                         <option value="" disabled>Choose a Sports</option>
                         <option value="c">Cricket</option>
                         <option value="f">Football</option>
                      </select>
                   </div>
-                  <div class="input-field col s12">
-                     <input type="text" id="news-headline" name="headline">
+               </div>
+               <div class="row">
+                  <div class="input-field col s6">
+                     <input type="text" id="news-headline" name="headline" length="80" maxlength="80" required>
                      <label for="news-headline">Set a Headline</label>
                   </div>
-                  <!--<div class="input-field col s12">
-                     <input type="text" id="news-article-content" name="article_image_name">
-                     <label for="news-article-content">Article Image Content</label>
-                  </div>-->
-                  <div class="file-field input-field col s12">
+               </div>
+               <div class="row">
+                  <div class="semi-card col s6">
+                     <div class="input-field">
+                        <textarea id="news-summary" class="materialize-textarea" name="article_content" required></textarea>
+                        <label for="news-summary">Summary</label>
+                     </div>
+                  </div>
+               </div>
+               <div class="row">
+                  <div class="file-field input-field col s6">
                      <div class="btn">
-                        <span>File</span>
-                        <input type="file" id="news-article-image" name="article_image_content">
+                        <span>Upload Header Image</span>
+                        <input type="file" id="news-article-image" name="article_image_content" required>
                      </div>
                      <div class="file-path-wrapper">
                         <input type="text" class="file-path validate" placeholder="Upload news headline Image">
                      </div>
                   </div>
-                  <div class="input-field col s12">
-                     <textarea id="news-summary" class="materialize-textarea" name="article_content"></textarea>
-                     <label for="news-summary">Summary</label>
-                  </div>
-                  <!--<div class="input-field col s12">
-                     <input type="text" id="news-icebreaker" name="ice_breaker_name">
-                     <label for="news-icebreaker">Icebreaker</label>
-                  </div>-->
-                  <div class="file-field input-field col s12">
+                  <div class="file-field input-field col s6">
                      <div class="btn">
                         <span>IceBreaker Image</span>
-                        <input type="file" id="ice-breaker-image" name="ice_breaker_content">
+                        <input type="file" id="ice-breaker-image" name="ice_breaker_content" required>
                      </div>
                      <div class="file-path-wrapper">
                         <input type="text" class="file-path validate" placeholder="Upload Ice Breaker Image">
                      </div>
                   </div>
+               </div>
+               <div class="row">
                   <div class="input-field col s12">
-                     <input type="text" id="news-pollquestion" name="poll_question">
+                     <input type="text" id="news-pollquestion" name="poll_question" required>
                      <label for="news-pollquestion">Enter Poll Question</label>
                   </div>
                   <div class="input-field col s12">
-                     <input type="text" id="news-notification-content" name="notification_content">
+                     <input type="text" id="news-notification-content" name="notification_content" required>
                      <label for="news-notification-content">Enter Notification Content</label>
                   </div>
                   <div class="input-field col s12">
