--- a/src/news_form.html
+++ b/src/news_form.html
@@ -54,9 +54,9 @@
          <li><a href="/news_form.html?type=add" class="active">News Form</a></li>
          <li class="hide only_admin"><a href="carousel_control.html">Carousel Control</a></li>
       </ul>
-      <div>
+      <div class="container">
          <div class="row">
-            <h4>News Form :</h4>
+            <h4 class="page-title">Add News Form :</h4>
             <form class="col s12" enctype="multipart/form-data">
                <div class="row">
                   <div class="input-field col s2">
@@ -68,13 +68,31 @@
                   </div>
                </div>
                <div class="row">
-                  <div class="input-field col s6">
-                     <input type="text" id="news-headline" name="headline" length="80" maxlength="80" required>
-                     <label for="news-headline">Set a Headline</label>
+                  <h5>Upload Header Image</h5>
+                  <div class="semi-card col s8">
+                     <div class="file-field input-field">
+                        <div class="btn waves-effect right">
+                           <span>Upload Header Image</span>
+                           <input type="file" id="news-article-image" name="article_image_content" required>
+                        </div>
+                        <div class="file-path-wrapper">
+                           <input type="text" class="file-path validate" placeholder="Upload news headline Image">
+                        </div>
+                     </div>
                   </div>
                </div>
                <div class="row">
-                  <div class="semi-card col s6">
+                  <h5>Heading</h5>
+                  <div class="semi-card col s8">
+                     <div class="input-field">
+                        <input type="text" id="news-headline" name="headline" length="80" maxlength="80" required>
+                        <label for="news-headline">Set a Headline</label>
+                     </div>
+                  </div>
+               </div>
+               <div class="row">
+                  <h5>Summary</h5>
+                  <div class="semi-card col s8">
                      <div class="input-field">
                         <textarea id="news-summary" class="materialize-textarea" name="article_content" required></textarea>
                         <label for="news-summary">Summary</label>
@@ -82,34 +100,38 @@
                   </div>
                </div>
                <div class="row">
-                  <div class="file-field input-field col s6">
-                     <div class="btn">
-                        <span>Upload Header Image</span>
-                        <input type="file" id="news-article-image" name="article_image_content" required>
-                     </div>
-                     <div class="file-path-wrapper">
-                        <input type="text" class="file-path validate" placeholder="Upload news headline Image">
-                     </div>
-                  </div>
-                  <div class="file-field input-field col s6">
-                     <div class="btn">
-                        <span>IceBreaker Image</span>
-                        <input type="file" id="ice-breaker-image" name="ice_breaker_content" required>
-                     </div>
-                     <div class="file-path-wrapper">
-                        <input type="text" class="file-path validate" placeholder="Upload Ice Breaker Image">
+                  <h5>Ice Breaker Image</h5>
+                  <div class="semi-card col s8">
+                     <div class="file-field input-field">
+                        <div class="btn waves-effect right">
+                           <span>IceBreaker Image</span>
+                           <input type="file" id="ice-breaker-image" name="ice_breaker_content" required>
+                        </div>
+                        <div class="file-path-wrapper">
+                           <input type="text" class="file-path validate" placeholder="Upload Ice Breaker Image">
+                        </div>
                      </div>
                   </div>
                </div>
                <div class="row">
-                  <div class="input-field col s12">
-                     <input type="text" id="news-pollquestion" name="poll_question" required>
-                     <label for="news-pollquestion">Enter Poll Question</label>
+                  <h5>Enter Poll Question</h5>
+                  <div class="semi-card col s8">
+                     <div class="input-field">
+                        <input type="text" id="news-pollquestion" name="poll_question" required>
+                        <label for="news-pollquestion">Enter Poll Question</label>
+                     </div>
                   </div>
-                  <div class="input-field col s12">
-                     <input type="text" id="news-notification-content" name="notification_content" required>
-                     <label for="news-notification-content">Enter Notification Content</label>
+               </div>
+               <div class="row">
+                  <h5>Enter Notification Content</h5>
+                  <div class="semi-card col s8">
+                     <div class="input-field">
+                        <input type="text" id="news-notification-content" name="notification_content" required>
+                        <label for="news-notification-content">Enter Notification Content</label>
+                     </div>
                   </div>
+               </div>
+               <div class="row">
                   <div class="input-field col s12">
                      <button class="btn waves-effect waves-light submit-btn" type="submit" name="action">
                         Create News
