--- a/src/carousel_control.html
+++ b/src/carousel_control.html
@@ -61,6 +61,7 @@
             <li class="carousel-item">Item 3</li>
             <li class="carousel-item">Item 4</li>
          </ul>
+         <a href="#" class="btn waves-effect save-carousel">Save Carousel</a>
          <div class="news-table row">
             <div class="col s12">
                <table class="bordered striped">
