--- a/src/news_form.html
+++ b/src/news_form.html
@@ -69,7 +69,12 @@
                </div>
                <div class="row">
                   <h5>Upload Header Image</h5>
-                  <div class="semi-card col s8">
+                  <div class="semi-card article-img-input col s8">
+                     <div class="row">
+                        <div class="col s12">
+                           <img id="article_image_file_preview" src="" class="responsive-img hide">
+                        </div>
+                     </div>
                      <div class="file-field input-field">
                         <div class="btn waves-effect right">
                            <span>Upload Header Image</span>
@@ -101,7 +106,12 @@
                </div>
                <div class="row">
                   <h5>Ice Breaker Image</h5>
-                  <div class="semi-card col s8">
+                  <div class="semi-card ice-breaker-img-input col s8">
+                     <div class="row">
+                        <div class="col s12">
+                           <img id="article_ice_breaker_file_preview" src="" class="responsive-img hide">
+                        </div>
+                     </div>
                      <div class="file-field input-field">
                         <div class="btn waves-effect right">
                            <span>IceBreaker Image</span>
