--- a/src/news.html
+++ b/src/news.html
@@ -5,10 +5,9 @@
    <meta charset="UTF-8">
    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    <title>News - Project Maximus - SportsUnity Control Station</title>
-   <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
-   <link href='https://fonts.googleapis.com/css?family=Merriweather+Sans' rel='stylesheet' type='text/css'>
    <link rel="stylesheet" href="../node_modules/materialize-css/dist/css/materialize.css">
    <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.12/css/jquery.dataTables.css">
 </head>
 
 <body>
@@ -16,7 +15,7 @@
    <header>
       <ul class="side-nav fixed">
          <li class="logo">
-            <a href="chat.html" class="brand-logo">
+            <a href="/" class="brand-logo">
                Project Maximus
             </a>
          </li>
@@ -30,7 +29,7 @@
                <i class="material-icons left">inbox</i> News Control
             </a>
          </li>
-         <li>
+         <li class="hide">
             <a href="stats.html">
                <i class="material-icons left">pie_chart</i> Stats Control
             </a>
@@ -56,6 +55,9 @@
       </ul>
       <div class="content">
          <div class="filter row">
+            <div class="input-field col s4">
+               <input type="text" id="filter_search_headline" name="filter_search_headline" placeholder="Search headline..">
+            </div>
             <div class="input-field col s2">
                <select name="" id="filter-sportsType">
                   <option value="" selected>All Sports</option>
@@ -94,6 +96,7 @@
 
    <script src="../node_modules/es6-promise/dist/es6-promise.js"></script>
    <script src="../node_modules/jquery/dist/jquery.js"></script>
+   <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.12/js/jquery.dataTables.js"></script>
    <script src="../node_modules/materialize-css/dist/js/materialize.js"></script>
    <script src="js/_utils/CONST.js"></script>
    <script src="js/_utils/utility.js"></script>
