--- a/src/carousel_control.html
+++ b/src/carousel_control.html
@@ -55,49 +55,38 @@
          <li class="hide only_admin"><a href="carousel_control.html" class="active">Carousel Control</a></li>
       </ul>
       <div class="content">
-         
+
          <div class="carousel-wrapper">
             <div class="container">
                <div class="row">
-                  <div class="col s2 add-btn-col">
-                     <a href="/news_form.html?type=add" class="btn add-btn">
-                        <i class="material-icons">add</i>
-                     </a>
-                     <span>Create news</span>
+                  <div class="col s2 info-col">
+                     <span>Click on Add to Carousel in Table action to get started.</span>
                   </div>
-                  <div class="col s10 carousel-col">
-                     <div class="nothing"></div>
-                     <div class="nothing"></div>
-                     <div class="nothing"></div>
-                     <div class="nothing"></div>
-                     <div class="nothing"></div>
-                     <div class="nothing"></div>
-                     <div class="nothing"></div>
-                     <div class="nothing"></div>
-                     <div class="nothing"></div>
-                     <div class="nothing"></div>
+                  <div id="carousel-list" class="col s10 carousel_list_col">
                   </div>
                </div>
-               <a href="#" class="btn waves-effect save-carousel right">Save Carousel</a>
             </div>
          </div>
 
-         
-         <div class="news-table row">
-            <div class="col s12">
-               <table class="bordered striped">
-                  <thead>
-                     <tr>
-                        <th>S. no</th>
-                        <th data-field="sports_type">Sports Type</th>
-                        <th data-field="headline">Headline</th>
-                        <th data-field="published_date">Published Date</th>
-                        <th data-field="actions">Actions</th>
-                     </tr>
-                  </thead>
-                  <tbody></tbody>
-               </table>
+         <div class="container">
+            <a href="#!" class="btn waves-effect right save-carousel">Save</a>
+            <div class="news-table row">
+               <div class="col s12">
+                  <table class="carousel-table bordered striped">
+                     <thead>
+                        <tr>
+                           <th>S. no</th>
+                           <th data-field="sports_type">Sports</th>
+                           <th data-field="headline">Headline</th>
+                           <th data-field="published_date">Published Date</th>
+                           <th data-field="actions">Actions</th>
+                        </tr>
+                     </thead>
+                     <tbody></tbody>
+                  </table>
+               </div>
             </div>
+
          </div>
       </div>
    </main>
