--- a/src/news.html
+++ b/src/news.html
@@ -80,7 +80,7 @@
                   <thead>
                      <tr>
                         <th>S. no</th>
-                        <th data-field="sports_type">Sports Type</th>
+                        <th data-field="sports_type">Sports</th>
                         <th data-field="headline">Headline</th>
                         <th data-field="published_date">Published Date</th>
                         <th data-field="status">Status</th>
@@ -93,6 +93,22 @@
          </div>
       </div>
    </main>
+
+   <div id="loader" class="modal">
+      <div class="preloader-wrapper active">
+         <div class="spinner-layer spinner-red-only">
+            <div class="circle-clipper left">
+               <div class="circle"></div>
+            </div>
+            <div class="gap-patch">
+               <div class="circle"></div>
+            </div>
+            <div class="circle-clipper right">
+               <div class="circle"></div>
+            </div>
+         </div>
+      </div>
+   </div>
 
    <script src="../node_modules/es6-promise/dist/es6-promise.js"></script>
    <script src="../node_modules/jquery/dist/jquery.js"></script>
