--- a/src/news_form.html
+++ b/src/news_form.html
@@ -159,6 +159,22 @@
          </div>
       </div>
    </main>
+
+   <div id="loader" class="modal">
+      <div class="preloader-wrapper active">
+         <div class="spinner-layer spinner-red-only">
+            <div class="circle-clipper left">
+               <div class="circle"></div>
+            </div>
+            <div class="gap-patch">
+               <div class="circle"></div>
+            </div>
+            <div class="circle-clipper right">
+               <div class="circle"></div>
+            </div>
+         </div>
+      </div>
+   </div>
    <script src="../node_modules/es6-promise/dist/es6-promise.js"></script>
    <script src="../node_modules/jquery/dist/jquery.js"></script>
    <script src="../node_modules/materialize-css/dist/js/materialize.js"></script>
