login page reworked with right code.

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,4 @@
-<!--
-   This page just check if User is Authenticated or not.
-   If he is, we redirect him to the APP page.
-   else, we redirect him to the LOGIN page.
--->
+<!-- This blank page just check if User is Authenticated or not. If he is, we redirect him to the APP page. else, we redirect him to the LOGIN page. -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -14,10 +10,9 @@
 <body>
    <script src="../node_modules/es6-promise/dist/es6-promise.js"></script>
    
-   <script src="js/_utils/CONST.js"></script>
-   <script src="js/_utils/utility.js"></script>
-   <script src="js/_utils/user.js"></script>
-   <script src="js/index/index.js"></script>
+   <script src="js/utility.js"></script>
+
+   <script src="js/index.js"></script>
 </body>
 
 </html>
