--- a/src/login.html
+++ b/src/login.html
@@ -5,15 +5,13 @@
    <meta charset="UTF-8">
    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    <title>Project Maximus - SportsUnity Control Station</title>
-   <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
-   <link href='https://fonts.googleapis.com/css?family=Merriweather+Sans' rel='stylesheet' type='text/css'>
    <link rel="stylesheet" href="../node_modules/materialize-css/dist/css/materialize.css">
    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-   <main id="index">
+   <main class="login">
       <div class="container">
          <a href="index.html" id="logo">
             <img src="media/sports_unity_logo_blue.png" alt="Sports Unity Primary Logo">
@@ -50,10 +48,10 @@
    <script src="../node_modules/es6-promise/dist/es6-promise.js"></script>
    <script src="../node_modules/jquery/dist/jquery.js"></script>
    <script src="../node_modules/materialize-css/dist/js/materialize.js"></script>
-   <script src="js/_utils/CONST.js"></script>
-   <script src="js/_utils/utility.js"></script>
-   <script src="js/_utils/user.js"></script>
-   <script src="js/login/login.js"></script>
+
+   <script src="js/utility.js"></script>
+   <script src="js/APIS/users.js"></script>
+   <script src="js/user/login.js"></script>
 </body>
 
 </html>
