--- a/src/news.html
+++ b/src/news.html
@@ -6,8 +6,8 @@
    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    <title>News - Project Maximus - SportsUnity Control Station</title>
    <link rel="stylesheet" href="../node_modules/materialize-css/dist/css/materialize.css">
-   <link rel="stylesheet" href="style.css">
    <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.12/css/jquery.dataTables.css">
+   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -15,11 +15,11 @@
    <header>
       <ul class="side-nav fixed">
          <li class="logo">
-            <a href="/" class="brand-logo">
+            <a href="index.html" class="brand-logo">
                Project Maximus
             </a>
          </li>
-         <li>
+         <li class="hide only_admin">
             <a href="chat.html">
                <i class="material-icons left">chat</i> Chat Control
             </a>
@@ -34,20 +34,20 @@
                <i class="material-icons left">pie_chart</i> Stats Control
             </a>
          </li>
-         <li>
-            <a href="add_user.html" class="hide only_admin">
+         <li class="hide only_admin">
+            <a href="add_user.html">
                <i class="material-icons">face</i>Add user
             </a>
          </li>
          <li>
-            <a href="#" onclick="logOutUser(); return false;" class="logout-btn">
+            <a href="#" onclick="Utils.clearUser(); return false;">
                <i class="material-icons">remove_circle</i>Logout
             </a>
          </li>
       </ul>
    </header>
 
-   <main id="news">
+   <main id="news" class="dashboard">
       <ul class="secondary-menu">
          <li><a href="news.html" class="active">All News</a></li>
          <li><a href="/news_form.html?type=add">News Form</a></li>
@@ -114,10 +114,9 @@
    <script src="../node_modules/jquery/dist/jquery.js"></script>
    <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.12/js/jquery.dataTables.js"></script>
    <script src="../node_modules/materialize-css/dist/js/materialize.js"></script>
-   <script src="js/_utils/CONST.js"></script>
-   <script src="js/_utils/utility.js"></script>
-   <script src="js/_utils/user.js"></script>
-   <script src="js/_utils/news.js"></script>
+
+   <script src="js/utility.js"></script>
+   <script src="js/APIS/news.js"></script>
 
    <script src="js/news/news.js"></script>
 </body>
