Commit for handing to rahul

--- a/src/news.html
+++ b/src/news.html
@@ -51,7 +51,7 @@
       <ul class="secondary-menu">
          <li><a href="news.html" class="active">All News</a></li>
          <li><a href="/news_form.html?type=add">News Form</a></li>
-         <li class="hide only_admin"><a href="carousel_control.html">Carousel Control</a></li>
+         <li class="hide only_admin"><a href="carousel.html">Carousel Control</a></li>
       </ul>
       <div class="content">
          <div class="filter row">
