--- a/src/carousel.html
+++ b/src/carousel.html
@@ -4,9 +4,7 @@
 <head>
    <meta charset="UTF-8">
    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-   <title>News - Project Maximus - SportsUnity Control Station</title>
-   <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
-   <link href='https://fonts.googleapis.com/css?family=Merriweather+Sans' rel='stylesheet' type='text/css'>
+   <title>Carousel - Project Maximus - SportsUnity Control Station</title>
    <link rel="stylesheet" href="../node_modules/materialize-css/dist/css/materialize.css">
    <link rel="stylesheet" href="style.css">
 </head>
@@ -16,11 +14,11 @@
    <header>
       <ul class="side-nav fixed">
          <li class="logo">
-            <a href="chat.html" class="brand-logo">
+            <a href="index.html" class="brand-logo">
                Project Maximus
             </a>
          </li>
-         <li>
+         <li class="hide only_admin">
             <a href="chat.html">
                <i class="material-icons left">chat</i> Chat Control
             </a>
@@ -30,32 +28,31 @@
                <i class="material-icons left">inbox</i> News Control
             </a>
          </li>
-         <li>
+         <li class="hide">
             <a href="stats.html">
                <i class="material-icons left">pie_chart</i> Stats Control
             </a>
          </li>
-         <li>
-            <a href="add_user.html" class="hide only_admin">
+         <li class="hide only_admin">
+            <a href="add_user.html">
                <i class="material-icons">face</i>Add user
             </a>
          </li>
          <li>
-            <a href="#" onclick="logOutUser(); return false;" class="logout-btn">
+            <a href="#" onclick="Utils.clearUser(); return false;">
                <i class="material-icons">remove_circle</i>Logout
             </a>
          </li>
       </ul>
    </header>
 
-   <main id="news" class="carousel">
+   <main id="news" class="dashboard">
       <ul class="secondary-menu">
          <li><a href="news.html">All News</a></li>
          <li><a href="/news_form.html?type=add">News Form</a></li>
-         <li class="hide only_admin"><a href="carousel_control.html" class="active">Carousel Control</a></li>
+         <li class="hide only_admin"><a href="carousel.html" class="active">Carousel Control</a></li>
       </ul>
-      <div class="content">
-
+      <div class="content carousel">
          <div class="carousel-wrapper">
             <div class="container">
                <div class="row">
@@ -72,7 +69,7 @@
             <a href="#!" class="btn waves-effect right save-carousel">Save</a>
             <div class="news-table row">
                <div class="col s12">
-                  <table class="carousel-table bordered striped">
+                  <table class="bordered striped">
                      <thead>
                         <tr>
                            <th>S. no</th>
@@ -91,15 +88,30 @@
       </div>
    </main>
 
+   <div id="loader" class="modal">
+      <div class="preloader-wrapper active">
+         <div class="spinner-layer spinner-red-only">
+            <div class="circle-clipper left">
+               <div class="circle"></div>
+            </div>
+            <div class="gap-patch">
+               <div class="circle"></div>
+            </div>
+            <div class="circle-clipper right">
+               <div class="circle"></div>
+            </div>
+         </div>
+      </div>
+   </div>
+
    <script src="../node_modules/es6-promise/dist/es6-promise.js"></script>
    <script src="../node_modules/jquery/dist/jquery.js"></script>
-   <script src="../node_modules/materialize-css/dist/js/materialize.js"></script>
    <script src="//cdnjs.cloudflare.com/ajax/libs/Sortable/1.4.2/Sortable.min.js"></script>
-   <script src="js/_utils/CONST.js"></script>
-   <script src="js/_utils/utility.js"></script>
-   <script src="js/_utils/user.js"></script>
-   <script src="js/_utils/news.js"></script>
+   <script src="../node_modules/materialize-css/dist/js/materialize.js"></script>
 
+   <script src="js/utility.js"></script>
+   <script src="js/APIS/carousel.js"></script>
+   
    <script src="js/news/carousel.js"></script>
 </body>
 
